# JMWinSpec

./: .gitignore  Makefile.am  README  README.md  configure.ac
LabView/: double_binread.vi  float_binread.vi  int_binread.vi  long_binread.vi  readSPE.lvlps  readSPE.lvproj  short_binread.vi
LabView/2015/: Read and Write Binary File Examples.vi  char_binread.vi  double_binread.vi  float_binread.vi  int_binread.vi  long_binread.vi  readSPE.lvlps  readSPE.lvproj  readSPEHeader.vi  readSPEHeaderTest.vi  read_exptime.vi  short_binread.vi  string_binread.vi
LabView/2020/: Read and Write Binary File Examples.vi  double_binread.vi  float_binread.vi  long_binread.vi  readSPE.lvlps  readSPEHeader.vi  readSPEHeaderTest.vi  read_exptime.vi  short_binread.vi
SPEQuickLook/: GeneratePreviewForURL.m  GenerateThumbnailForURL.m  Info.plist  SPEData.h  SPEData.m  SPEDrawDocument.h  SPEDrawDocument.m  SPEHeader.h  WinSpecHeader.h  main.c
SPEQuickLook/SPEQuickLook.xcodeproj/: motohisa.mode1v3  motohisa.pbxuser  project.pbxproj
SPEQuickLook/SPEQuickLook.xcodeproj/project.xcworkspace/xcuserdata/motohisa.xcuserdatad/: UserInterfaceState.xcuserstate
SPEQuickLook/SPEQuickLook.xcodeproj/xcuserdata/motohisa.xcuserdatad/xcschemes/: SPEQuickLookLeopard.xcscheme  xcschememanagement.plist
SPEQuickLook/en.lproj/: InfoPlist.strings
ViewSPE/: Makefile  Makefile.am  Makefile.in  Makefile.orig  config.h  config.h.in  config.status  configure  configure.ac  configure.in  copyright.h  plplotsubs0.c  readspe.c  readspe.h  viewspe  viewspe.c  viewspe.h
ViewSPE/.deps/: plplotsubs0.Po  readspe.Po  viewspe.Po
ViewSPE/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
ViewSPE_Catalina/: AutoTicks.c  FileDialogController.h  FileDialogController.m  SPEDrawDocument.h  SPEDrawDocument.m  SPEHeader.h  readspe.c
ViewSPE_Catalina/SPEQuickLook/: Info.plist  PreviewViewController.h  PreviewViewController.m
ViewSPE_Catalina/ViewSPE_Catalina/: AppDelegate.h  AppDelegate.m  Info.plist  main.m
ViewSPE_Catalina/ViewSPE_Catalina.xcodeproj/: project.pbxproj
ViewSPE_Catalina/ViewSPE_Catalina.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ViewSPE_Catalina/ViewSPE_Catalina/Base.lproj/: MainMenu.xib
ViewSPE_Catalina/ViewSPE_CatalinaTests/: ViewSPE_CatalinaTests.m
ViewSPE_Catalina/ViewSPE_CatalinaUITests/: ViewSPE_CatalinaUITests.m
ViewSPE_cocoa/: AutoTicks.h  FileDialogController.h  FileDialogController.m  Info.plist  SPEData.h  SPEData.m  SPEHeader.m  ViewSPE_cocoa_Prefix.pch  WinSpecHeader25.h  main.m  readspe.c  readspe.h
ViewSPE_cocoa/ViewSPE_cocoa.xcodeproj/: motohisa.mode1v3  motohisa.pbxuser  project.pbxproj
ViewSPE_cocoa/en.lproj/: MainMenu.xib
doc/: winhead.webarchive
glue/: Makefile.am  configure.ac  convertspe.c  glue.c  glue.h  glue.i
perl/: HeaderDump.pl  readcomment.pl  readheader.pl  wlcen.pl  wlcencomp.pl
python/: Makefile.am  __init__.py  binread.py  compareconvert.py  convertsample.py  glue.c  glue.h  glue.i  glue.py  glueSPEs.py  glue_sample.py  gluecheck.py  gluemulti_example.py  glueprocs.py  gluespectra.py  jmpyspe.i  pyglue2.c  pyglue2.h  pyspeconvert.c  pyspeconvert.h  readcomments.py  readspe.c  readspe.py  readspe_module.py  sample_convert.py  setup.py  speutils.c  speutils.i
python/example/: check_lavgexp.py  checkglued.py  glue.py  glueSPEs.py  glue_example1.ipynb  glue_example2.ipynb  gluecsv.py  glueinfo.py  plot_csv.py  readcomments.py  spe2csv.py  spe2png.py  viewspe.py
python/jmpyspe/: dumpspe.py  readspe.py  readspe_sample.py
python/speutils/: __init__.py  glue_sample.py  readcomments.py  sample_convert.py
python/speutils/example/: glue.py
speutils/: Makefile.am  TODO  WinSpecHeader25.h  autocalib.c   calib_util.c   calib_util.h  checkWL.c  checkWL.c   configure.ac  convertspe.c  convertspe.h  copyright.h  fixcalib.c  fixcalib.c   glue.c  glue.h  glue2.c  glue2.h  headertest.c  plplotsubs0.c  plplotsubs0.h  readspe.c  readspe.c   readspe.h  viewspe.c
test/: Makefile  headertest
